--- a/mobile/ChavesIME/app/src/main/res/layout/activity_reservar_sala.xml
+++ b/mobile/ChavesIME/app/src/main/res/layout/activity_reservar_sala.xml
@@ -4,37 +4,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="br.ufba.chavesime.ReservarSalaActivity"
     android:textAlignment="center">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="8dp"
-        android:minHeight="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        app:titleTextColor="@color/white"
+        app:theme="@style/ThemeOverlay.AppCompat"
+        android:id="@+id/homeToolbar"
+        android:textAlignment="center">
+    </android.support.v7.widget.Toolbar>
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Sala X"
+        android:text="Sala #"
         android:id="@+id/textSala"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
         android:layout_alignParentEnd="false"
         android:layout_alignParentStart="false"
         android:autoText="false"
         android:enabled="true"
         android:focusable="false"
-        android:textSize="50dp" />
+        android:textSize="50dp"
+        android:layout_below="@+id/homeToolbar"
+        android:layout_marginTop="10dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -48,7 +46,8 @@
         android:textSize="35dp"
         android:layout_alignParentEnd="false"
         android:layout_alignParentStart="true"
-        android:clickable="true" />
+        android:clickable="true"
+        android:layout_marginLeft="20dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -59,7 +58,8 @@
         android:layout_below="@+id/textData"
         android:layout_alignParentStart="true"
         android:textSize="35dp"
-        android:layout_marginTop="40dp" />
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="20dp" />
 
     <Button
         android:layout_width="180dp"
@@ -84,27 +84,30 @@
         android:transitionGroup="false"
         android:layout_alignTop="@+id/textHorario"
         android:layout_toEndOf="@+id/textHorario"
-        android:layout_marginLeft="60dp"
+        android:layout_marginLeft="15dp"
         android:layout_alignParentStart="false"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="7dp" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:id="@+id/containerData"
+        android:id="@+id/editTextData"
         android:layout_centerHorizontal="true"
         android:layout_toEndOf="@id/textHorario"
         android:layout_alignTop="@+id/textData"
         android:layout_alignParentEnd="false"
         android:inputType="none"
         android:onClick="showDatePickerDialog"
-        android:textSize="25dp"
-        android:textStyle="italic"
-        android:textAlignment="textEnd"
         android:autoText="false"
         android:editable="false"
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="-5dp" />
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="20dp"
+        android:textColor="@color/colorPrimary"
+        android:gravity="center"
+        android:textIsSelectable="false"
+        android:textSize="20dp" />
 
 </RelativeLayout>
