--- a/mobile/ChavesIME/app/src/main/res/values/arrays.xml
+++ b/mobile/ChavesIME/app/src/main/res/values/arrays.xml
@@ -3,9 +3,11 @@
     <string-array name="menuItemsArray">
         <item>Salas</item>
         <item>Datas</item>
+        <item>Cronograma</item>
         <item>Sair</item>
     </string-array>
     <string-array name="menuDrawablesArray">
+        <item>logo_ufba</item>
         <item>logo_ufba</item>
         <item>logo_ufba</item>
         <item>logo_ufba</item>
