Inserindo botões nos painéis de estatística no dashboard e ajustando responsividade da tela

--- a/layout/index.html
+++ b/layout/index.html
@@ -154,7 +154,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <!-- Main content -->
     <section class="content">
       <div class="row">
-        <div class="col-lg-3 col-xs-6">
+        <div class="col-lg-3 col-md-3 col-xs-6 col-sm-6">
           <!-- small box -->
           <div class="small-box bg-aqua">
             <div class="inner">
@@ -163,12 +163,13 @@ scratch. This page gets rid of all links and provides the needed markup only.
               <p>Salas disponíveis</p>
             </div>
             <div class="icon">
-              <i class="fa fa-fw fa-unlock"></i>
+              <i class="fa fa-key"></i>
             </div>
+            <a href="pages/lista_salas.html" class="small-box-footer">Detalhes <i class="fa fa-share"></i></a>
           </div>
         </div>
         <!-- ./col -->
-        <div class="col-lg-3 col-xs-6">
+        <div class="col-lg-3 col-md-3 col-xs-6 col-sm-6">
           <!-- small box -->
           <div class="small-box bg-green">
             <div class="inner">
@@ -178,38 +179,41 @@ scratch. This page gets rid of all links and provides the needed markup only.
             <div class="icon">
               <i class="fa fa-fw fa-wrench"></i>
             </div>
+            <a href="#listaOcorrencias" class="small-box-footer">Detalhes <i class="fa fa-share"></i></a>
           </div>
         </div>
         <!-- ./col -->
-        <div class="col-lg-3 col-xs-6">
+        <div class="col-lg-3 col-md-3 col-xs-6 col-sm-6">
           <!-- small box -->
           <div class="small-box bg-yellow">
             <div class="inner">
               <h3>27</h3>
-              <p>Cadastros semanais</p>
+              <p>Reservas pendentes</p>
             </div>
             <div class="icon">
-              <i class="ion ion-person-add"></i>
+              <i class="fa fa-archive"></i>
             </div>
+            <a href="#listaReservasParaAprovacao" class="small-box-footer">Detalhes <i class="fa fa-share"></i></a>
           </div>
         </div>
         <!-- ./col -->
-        <div class="col-lg-3 col-xs-6">
+        <div class="col-lg-3 col-md-3 col-xs-6 col-sm-6">
           <!-- small box -->
           <div class="small-box bg-red">
             <div class="inner">
-              <h3>65%</h3>
-              <p>Porcentagem de inadimplência</p>
+              <h3>9</h3>
+              <p>Reservas na semana</p>
             </div>
             <div class="icon">
-              <i class="fa fa-fw fa-thumbs-o-down"></i>
+              <i class="fa fa-calendar"></i>
             </div>
+            <a href="#calendario" class="small-box-footer">Detalhes <i class="fa fa-share"></i></a>
           </div>
         </div>
         <!-- ./col -->
       </div>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 col-xs-12 col-sm-12 col-lg-6">
           <div class="panel panel-primary">
             <div class="panel-heading">
               <h4>Últimas solicitações de reservas</h4>
@@ -255,20 +259,20 @@ scratch. This page gets rid of all links and provides the needed markup only.
               </tbody>
             </table>
             <div class="pull-right">
-              <a href="#">Ver todas as solicitações...</a>
+              <a href="#listaReservasParaAprovacao">Ver todas as solicitações...</a>
             </div>
           </div>
           <!-- /.box-body -->
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 col-xs-12 col-sm-12 col-lg-6">
         <div class="panel panel-primary">
           <div class="panel-heading">
             <h4>Últimas ocorrências registradas</h4>
           </div>
           <div class="panel-body">
             <div class="row">
-              <div class="col-md-12">
+              <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
                 <div class="box box-default collapsed-box box-solid">
                   <div class="box-header with-border">
                     <h3 class="box-title">IME - Sala 143</h3>
@@ -288,7 +292,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
               </div>
             </div>
             <div class="row">
-              <div class="col-md-12">
+              <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
                 <div class="box box-default collapsed-box box-solid">
                   <div class="box-header with-border">
                     <h3 class="box-title">PAF 3 - Auditório</h3>
@@ -308,7 +312,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
               </div>
             </div>
             <div class="row">
-              <div class="col-md-12">
+              <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
                 <div class="box box-default collapsed-box box-solid">
                   <div class="box-header with-border">
                     <h3 class="box-title">PAF 1 - Sala 212</h3>
@@ -328,7 +332,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
               </div>
             </div>
             <div class="row">
-              <div class="col-md-12">
+              <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
                 <div class="box box-default collapsed-box box-solid">
                   <div class="box-header with-border">
                     <h3 class="box-title">PAF 1 - Sala 12</h3>
@@ -348,7 +352,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
               </div>
             </div>
             <div class="pull-right">
-              <a href="#">Ver todas ocorrências...</a>
+              <a href="#listaOcorrencias">Ver todas ocorrências...</a>
             </div>
           </div>
         </div>
