--- a/layout/pages/relatorio_salas.html
+++ b/layout/pages/relatorio_salas.html
@@ -184,7 +184,7 @@
         <div class="col-xs-12">
           <a href="#" target="_blank" class="btn btn-default"><i class="fa fa-print"></i> Imprimir</a>
           <button type="button" class="btn btn-primary pull-right">
-            Apagar Reserva
+            Cancelar Reserva
           </button>
           <button type="button" class="btn btn-primary pull-right" style="margin-right: 5px;">
             Editar Reserva
