cadastro de sala

--- a/layout/index.html
+++ b/layout/index.html
@@ -116,7 +116,14 @@ scratch. This page gets rid of all links and provides the needed markup only.
               </span>
             </a>
             <ul class="treeview-menu">
-              <li><a href="pages/lista_salas.html"><i class="fa fa-circle-o"></i> Buscar salas</a></li>
+            <li>
+              <a href="pages/lista_salas.html"><i class="fa fa-circle-o"></i> Buscar salas</a>
+            </li>
+            </ul>
+            <ul class="treeview-menu">
+              <li>
+                <a href="pages/cadastrar_sala.html"><i class="fa fa-pencil-square-o"></i> Cadastro</a>
+              </li>
             </ul>
           </li>
           <li class="treeview">
