--- a/layout/pages/cadastrar_usuario.html
+++ b/layout/pages/cadastrar_usuario.html
@@ -132,6 +132,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
             </a>
             <ul class="treeview-menu">
               <li><a href="lista_salas.html"><i class="fa fa-circle-o"></i> Buscar salas</a></li>
+            </ul><ul class="treeview-menu">
+              <li>
+                <a href="pages/cadastrar_sala.html"><i class="fa fa-pencil-square-o"></i> Cadastro</a>
+              </li>
             </ul>
           </li>
           <li class="treeview active">
