--- a/layout/pages/lista_salas.html
+++ b/layout/pages/lista_salas.html
@@ -120,6 +120,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
           <ul class="treeview-menu">
             <li class="active"><a href="lista_salas.html"><i class="fa fa-circle-o"></i> Buscar salas</a></li>
           </ul>
+          <ul class="treeview-menu">
+              <li>
+                <a href="pages/cadastrar_sala.html"><i class="fa fa-pencil-square-o"></i> Cadastro</a>
+              </li>
+            </ul>
         </li>
         <li class="treeview">
           <a href="#">
