--- a/layout/pages/cadastrar_sala.html
+++ b/layout/pages/cadastrar_sala.html
@@ -37,6 +37,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- Bootstrap time Picker -->
   <link rel="stylesheet" href="../plugins/timepicker/bootstrap-timepicker.min.css">
 
+  <script type="application/javascript" src="script.js"></script>
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
@@ -180,29 +181,29 @@ scratch. This page gets rid of all links and provides the needed markup only.
           </div>
           <!-- /.box-header -->
           <!-- form start -->
-          <form role="form">
+          <form role="form" onsubmit="return verify()">
             <div class="box-body">
               <div class="form-group">
                 <i class="fa fa-hashtag" aria-hidden="true"></i>
-                <label for=""> Número da sala </label>
-                <input type="text" class="form-control" id="" placeholder="Nome do Usuario">
+                <label> Número da sala </label>
+                <input type="text" class="form-control" id="numero_sala" placeholder="Número da sala" required>
               </div>
 
               <div class="form-group">
                 <i class="fa fa-users" aria-hidden="true"></i>
-                <label for="exampleInputPassword1"> Capacidade </label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                <label> Capacidade </label>
+                <input type="text" class="form-control" id="capacidade" placeholder="Capacidade" required>
               </div>
 
               <div class="form-group">
                 <i class="fa fa-building-o" aria-hidden="true"></i>
-                <label for="exampleInputEmail1"> Pavilhão </label>
-                <input type="text" class="form-control" placeholder="Email">
+                <label> Pavilhão </label>
+                <input type="text" class="form-control" placeholder="Pavilhão" required>
               </div>
               <!-- Select radio -->
               <div class="form-group">
                 <i class="fa fa-question" aria-hidden="true"></i>
-                <label for="inputEmail3" class="">Tipo da sala</label>
+                <label>Tipo da sala</label>
                 <div class="radio">
                   <label>
                     <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
@@ -231,7 +232,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
                 <div class="form-group">
                   <i class="fa fa-file-image-o" aria-hidden="true"></i>
-                  <label for="exampleInputFile">Imagem da sala</label>
+                  <label>Imagem da sala</label>
                   <input type="file" id="exampleInputFile">
                 </div>
               </div>
