--- a/mobile/ChavesIME/app/src/main/res/values/arrays.xml
+++ b/mobile/ChavesIME/app/src/main/res/values/arrays.xml
@@ -4,9 +4,11 @@
         <item>Salas</item>
         <item>Datas</item>
         <item>Cronograma</item>
+        <item>Exemplo de Requisição</item>
         <item>Sair</item>
     </string-array>
     <string-array name="menuDrawablesArray">
+        <item>logo_ufba</item>
         <item>logo_ufba</item>
         <item>logo_ufba</item>
         <item>logo_ufba</item>
